--- a/hairconsultation.html
+++ b/hairconsultation.html
@@ -5,10 +5,10 @@
 
 	<!-- Website Title & Description for Search Engine purposes -->
 	<title>Hair-Consultation</title>
-	<meta name="description" content="">
+	<meta name="description" content=""></meta>
 
 	<!-- Mobile viewport optimized -->
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"></meta>
 
 	<!-- Bootstrap CSS -->
 	<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -29,8 +29,6 @@
 	<div class="container" id="main">
 
 		<div class="navbar navbar-fixed-top" id="navbar-id">
-
-
 
 			<div class="container" >
 				<button class="navbar-toggle" data-target=".navber-responsive-collapse" data-toggle="collapse">
@@ -87,7 +85,7 @@
 					</div><!-- end collapse -->
 
 				</div><!-- end container -->
-				
+
 			</div><!-- end navbar -->
 
 			<div class="hairconsultant">
@@ -192,7 +190,7 @@
 
 
 		<!-- All Javascript at the bottom of the page for faster page loading -->
-		
+
 		<!-- First try for the online version of jQuery-->
 		<script src="http://code.jquery.com/jquery.js"></script>
 
@@ -207,4 +205,3 @@
 
 	</body>
 	</html>
-
